[[_release_notes]]
= Release Notes
include::include.adoc[]

== 2.0-M6 (tbd)

== 2.0-M5 (2021-03-23)

=== Breaking Changes

// tag::breaking-change-report-log-extension-removed[]
- The `ReportLogExtension` vestiges were removed. As this extension was mostly used for an unreleased Spock module, this won't affect many users.
  If you are using a <<extensions.adoc#spock-configuration-file,Spock Configuration File>> with a `report` section,
  then you must delete everything from this section except for `issueNamePrefix` and `issueUrlPrefix`.
  These two properties are still supported and used by the `@Issue` extension.
// end::breaking-change-report-log-extension-removed[]

=== Misc

- Add support for injection into `@Shared` fields in `spock-spring` module which users can opt-in for by adding
  `@EnableSharedInjection` to the specification. https://github.com/spockframework/spock/issues/76[#76]

// tag::breaking-change-2-0-misc[]
- Add new `displayName` via `INameable` for `SpecInfo`, `FeatureInfo`, and `IterationInfo`.
  This field can be set via extensions to change the reported name.
  The existing iteration `NameProvider` now also sets the `displayName` instead of the `name`.
  Modifying the `name` instead of `displayName` is now considered `deprecated` for extensions.
  https://github.com/spockframework/spock/issues/1236[#1236]
// end::breaking-change-2-0-misc[]

- Add support for constructor injection for extensions

- Improve final field handling.
  Final fields are now transformed similar to shared fields, so that we can still delay the initialization but keep them
  unmodifiable to user code. https://github.com/spockframework/spock/issues/1011[#1011]

- Improve parallel extensions to support inheritance https://github.com/spockframework/spock/issues/1245[#1245]

- Improve PollingConditions

- Improve some AST transformation code regarding error handling

- Deprecate `AbstractGlobalExtension` and replace with `IGlobalExtension`
