@@ -7,7 +7,6 @@ import org.spockframework.util.Beta;
  * Common resource names for synchronizing test execution.
  *
  * @see spock.lang.ResourceLock
- * @see spock.lang.ResourceLockChildren
  * @see ExclusiveResource
  * @since 2.0
  */
